packages/axelar-wasm-std-derive/tests/ui/event_attributes_tuple_struct.rs
use axelar_wasm_std_derive::EventAttributes;

#[derive(EventAttributes)]
struct TupleStruct(u32, String);

fn main() {}
